yaml/hello-kubernetes.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: foo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /foo
            backend:
              serviceName: hello-foo
              servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: hello-foo
spec:
  selector:
    app: hello-foo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-foo
  template:
    metadata:
      labels:
        app: hello-foo
    spec:
      containers:
        - name: hello-foo
          image: bbehanquest/hello-kubernetes
          resources:
            requests:
              memory: 32Mi
              cpu: 0.05
            limits:
              memory: 64Mi
          ports:
            - containerPort: 8080
