yaml/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: static-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: hello-foo
              servicePort: 80
          - path: /images
            backend:
              serviceName: hello-foo
              servicePort: 80
          - path: /css
            backend:
              serviceName: hello-foo
              servicePort: 80
